Basic working playbook for physical nodes

--- a/playbook.yml
+++ b/playbook.yml
@@ -4,37 +4,50 @@
 - name: Infrastructure Setup
   hosts: physical
   become: true
+  become_method: sudo
   tasks:
     - name: UFW - Allow SSH connections
       community.general.ufw:
         rule: allow
         name: OpenSSH
 
-    - name: UFW - Allow LXD connections
-      community.general.ufw:
-        rule: allow
-        port: 8443
-        proto: tcp
-
-    - name: UFW - Allow Ceph connections
-      community.general.ufw:
-        rule: allow
-        port: '3300,6789,6800:7300'
-        proto: tcp
-
-    - name: UFW - Allow OVN connections
-      community.general.ufw:
-        rule: allow
-        port: '6641:6642'
-        proto: tcp
-
-    - name: UFW - Allow OVN connections
-      community.general.ufw:
-        rule: allow
-        port: '6081'
-        proto: udp
-
     - name: UFW - Enable and deny by default
       community.general.ufw:
         state: enabled
         default: deny
+
+    - name: Disable password authentication
+      lineinfile:
+        path: /etc/ssh/sshd_config
+        state: present
+        regexp: '^#?PasswordAuthentication'
+        line: 'PasswordAuthentication no'
+
+    - name: Install microk8s
+      community.general.snap:
+        name: microk8s
+        state: present
+        channel: 1.28/stable
+        classic: true
+
+    - name: Get microk8s info
+      command: snap info microk8s
+      register: microk8s_result
+
+    - name: Hold microk8s
+      command: snap refresh --hold microk8s
+      when: '"hold:" not in microk8s_result.stdout'
+
+    - name: Install microceph
+      community.general.snap:
+        name: microceph
+        channel: reef/stable
+        state: present
+
+    - name: Get microceph info
+      command: snap info microceph
+      register: microceph_result
+
+    - name: Hold microceph
+      command: snap refresh --hold microceph
+      when: '"hold:" not in microceph_result.stdout'
