--- a/inventory.ini
+++ b/inventory.ini
@@ -1,14 +1,24 @@
 [physical]
-meer0.duckbill-frog.ts.net
-meer1.duckbill-frog.ts.net
-meer2.duckbill-frog.ts.net
-meer3.duckbill-frog.ts.net
-thelio-mira0.duckbill-frog.ts.net
+meer0.{{ current_domain }}
+meer1.{{ current_domain }}
+meer2.{{ current_domain }}
+meer3.{{ current_domain }}
+thelio-mira0.{{ current_domain }}
+
+[cloud]
+meer0.{{ current_domain }}              main_interface=eno1         microovn_interface=enx5091e3685abb
+meer1.{{ current_domain }}              main_interface=enp86s0      microovn_interface=enx5091e3685b2c
+meer2.{{ current_domain }}              main_interface=enp86s0      microovn_interface=enx5091e368653d
+meer3.{{ current_domain }}              main_interface=enp86s0      microovn_interface=enx5091e3686565
+thelio-mira0.{{ current_domain }}       main_interface=enp16s0      microovn_interface=enx5091e3685b14
 
 [virtual]
-amp.duckbill-frog.ts.net
-pihole.duckbill-frog.ts.net
-plex.duckbill-frog.ts.net
-proxy.duckbill-frog.ts.net
-syncthing.duckbill-frog.ts.net
-taskd.duckbill-frog.ts.net
+amp.{{ current_domain }}
+pihole.{{ current_domain }}
+plex.{{ current_domain }}
+proxy.{{ current_domain }}
+syncthing.{{ current_domain }}
+taskd.{{ current_domain }}
+
+[auth]
+auth.{{ current_domain }}
