--- a/stage-inventory.ini
+++ b/stage-inventory.ini
@@ -1,6 +1,13 @@
 [physical]
-node0.lxd
-node1.lxd
-node2.lxd
+ansible-test.lxd
+ldap-test.lxd
 
 [virtual]
+
+
+[auth]
+ldap-test.lxd
+
+
+[cloud]
+ansible-test.lxd              main_interface=eno1         microovn_interface=enx5091e3685abb
