--- a/stage-inventory.ini
+++ b/stage-inventory.ini
@@ -2,12 +2,8 @@
 ansible-test.lxd
 ldap-test.lxd
 
-[virtual]
-
-
-[auth]
+[auth_server]
 ldap-test.lxd
-
 
 [cloud]
 ansible-test.lxd              main_interface=eno1         microovn_interface=enx5091e3685abb
