--- a/stage-inventory.ini
+++ b/stage-inventory.ini
@@ -7,3 +7,7 @@ ldap-test.lxd
 
 [cloud]
 ansible-test.lxd              main_interface=eno1         microovn_interface=enx5091e3685abb
+
+[auth_client]
+ansible-test.lxd
+
