--- a/vars/vars.yml
+++ b/vars/vars.yml
@@ -5,7 +5,9 @@ ldap_org_name: 'moyer'
 ldap_domain: 'moyer.wtf'
 ldap_base_dn: 'dc=moyer,dc=wtf'
 ldap_admin_cn: 'cn=admin'
-ldap_uri: 'ldap://auth.moyer.wtf'
+ldap_uri: 'ldap://ldap-test.lxd'
+ldap_users_ou: 'ou=users'
+ldap_groups_ou: 'ou=groups'
 
 # Versions
 
