--- a/roles/ldap-server/files/ldapadduser.template
+++ b/roles/ldap-server/files/ldapadduser.template
@@ -1,6 +1,7 @@
 dn: uid=<user>,<usuffix>,<suffix>
 objectClass: inetOrgPerson
 objectClass: posixAccount
+objectClass: ldapPublicKey
 cn: <user>
 sn: <ask>
 uid: <user>
