First pass at a 'production' deployment of ansible

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,24 +1,25 @@
 [physical]
-meer0.{{ current_domain }}
-meer1.{{ current_domain }}
-meer2.{{ current_domain }}
-meer3.{{ current_domain }}
-thelio-mira0.{{ current_domain }}
+meer0.moyer.wtf
+meer1.moyer.wtf
+meer2.moyer.wtf
+meer3.moyer.wtf
+thelio-mira0.moyer.wtf
+pihole.moyer.wtf
+auth.moyer.wtf
 
 [cloud]
-meer0.{{ current_domain }}              main_interface=eno1         microovn_interface=enx5091e3685abb
-meer1.{{ current_domain }}              main_interface=enp86s0      microovn_interface=enx5091e3685b2c
-meer2.{{ current_domain }}              main_interface=enp86s0      microovn_interface=enx5091e368653d
-meer3.{{ current_domain }}              main_interface=enp86s0      microovn_interface=enx5091e3686565
-thelio-mira0.{{ current_domain }}       main_interface=enp16s0      microovn_interface=enx5091e3685b14
+meer0.moyer.wtf              main_interface=eno1         microovn_interface=enx5091e3685abb
+meer1.moyer.wtf              main_interface=enp86s0      microovn_interface=enx5091e3685b2c
+meer2.moyer.wtf              main_interface=enp86s0      microovn_interface=enx5091e368653d
+meer3.moyer.wtf              main_interface=enp86s0      microovn_interface=enx5091e3686565
+thelio-mira0.moyer.wtf       main_interface=enp16s0      microovn_interface=enx5091e3685b14
 
-[virtual]
-amp.{{ current_domain }}
-pihole.{{ current_domain }}
-plex.{{ current_domain }}
-proxy.{{ current_domain }}
-syncthing.{{ current_domain }}
-taskd.{{ current_domain }}
+#[virtual]
+#amp.moyer.wtf
+#plex.moyer.wtf
+#proxy.moyer.wtf
+#syncthing.moyer.wtf
 
-[auth]
-auth.{{ current_domain }}
+[auth_server]
+auth.moyer.wtf
+
