More fixes and updates

--- a/roles/base-config/tasks/main.yml
+++ b/roles/base-config/tasks/main.yml
@@ -7,3 +7,9 @@
     state: present
     regexp: '^#?PasswordAuthentication'
     line: 'PasswordAuthentication no'
+
+- name: Install core packages
+  package:
+    name:
+      - zsh
+      - squid-deb-proxy-client
