Setting up the propoer way to deploy TLS certs and keys

--- a/inventory.ini
+++ b/inventory.ini
@@ -10,6 +10,7 @@ meer3.moyer.wtf
 thelio-mira0.moyer.wtf
 pihole.moyer.wtf
 auth.moyer.wtf
+dashboard.moyer.wtf
 
 [cloud]
 meer0.moyer.wtf              main_interface=eno1         microovn_interface=enx5091e3685abb
@@ -26,4 +27,3 @@ thelio-mira0.moyer.wtf       main_interface=enp16s0      microovn_interface=enx5
 
 [auth_server]
 auth.moyer.wtf
-
