--- a/roles/base-config/tasks/main.yml
+++ b/roles/base-config/tasks/main.yml
@@ -8,8 +8,17 @@
     regexp: '^#?PasswordAuthentication'
     line: 'PasswordAuthentication no'
 
+- name: Update apt cache
+  ansible.builtin.apt:
+    update_cache: yes
+    cache_valid_time: 3600
+
 - name: Install core packages
   package:
     name:
       - zsh
       - squid-deb-proxy-client
+
+- name: Upgrade system
+  ansible.builtin.apt:
+    upgrade: dist
