--- a/roles/ldap-client/tasks/main.yml
+++ b/roles/ldap-client/tasks/main.yml
@@ -50,6 +50,14 @@
     group: root
     mode: u=rw,g=r,o=r
 
+- name: Copy CA cert
+  copy:
+    src: ssl/chain.pem
+    dest: /etc/ssl/certs/chain.pem
+    owner: root
+    group: root
+    mode: u=rw,g=rw,o=r
+
 - name: SSH Key search script
   copy:
     src: ldap-ssh-publickey.sh
