--- a/inventory.ini
+++ b/inventory.ini
@@ -3,27 +3,63 @@ ansible_connection=ssh
 ansible_user=ansible
 
 [physical]
-meer0.moyer.wtf
-meer1.moyer.wtf
-meer2.moyer.wtf
-meer3.moyer.wtf
-thelio-mira0.moyer.wtf
-pihole.moyer.wtf
-auth.moyer.wtf
-dashboard.moyer.wtf
+meer0.internal.moyer.wtf
+meer1.internal.moyer.wtf
+meer2.internal.moyer.wtf
+meer3.internal.moyer.wtf
+thelio-mira0.internal.moyer.wtf
+pihole.internal.moyer.wtf
+auth.internal.moyer.wtf
+dashboard.internal.moyer.wtf
 
 [cloud]
-meer0.moyer.wtf              main_interface=eno1         microovn_interface=enx5091e3685abb
-meer1.moyer.wtf              main_interface=enp86s0      microovn_interface=enx5091e3685b2c
-meer2.moyer.wtf              main_interface=enp86s0      microovn_interface=enx5091e368653d
-meer3.moyer.wtf              main_interface=enp86s0      microovn_interface=enx5091e3686565
-thelio-mira0.moyer.wtf       main_interface=enp16s0      microovn_interface=enx5091e3685b14
-
-#[virtual]
-#amp.moyer.wtf
-#plex.moyer.wtf
-#proxy.moyer.wtf
-#syncthing.moyer.wtf
+meer0.internal.moyer.wtf              main_interface=eno1         microovn_interface=enx5091e3685abb
+meer1.internal.moyer.wtf              main_interface=enp86s0      microovn_interface=enx5091e3685b2c
+meer2.internal.moyer.wtf              main_interface=enp86s0      microovn_interface=enx5091e368653d
+meer3.internal.moyer.wtf              main_interface=enp86s0      microovn_interface=enx5091e3686565
+thelio-mira0.internal.moyer.wtf       main_interface=enp16s0      microovn_interface=enx5091e3685b14
 
 [auth_server]
-auth.moyer.wtf
+auth.internal.moyer.wtf
+
+[tailnet]
+meer0.internal.moyer.wtf
+meer1.internal.moyer.wtf
+meer2.internal.moyer.wtf
+meer3.internal.moyer.wtf
+thelio-mira0.internal.moyer.wtf
+pihole.internal.moyer.wtf
+auth.internal.moyer.wtf
+dashboard.internal.moyer.wtf
+amp.internal.moyer.wtf
+haproxy.internal.moyer.wtf
+plex.internal.moyer.wtf
+pkg-proxy.internal.moyer.wtf
+syncthing.internal.moyer.wtf
+www.internal.moyer.wtf
+
+[virtual]
+amp.internal.moyer.wtf
+haproxy.internal.moyer.wtf
+plex.internal.moyer.wtf
+pkg-proxy.internal.moyer.wtf
+syncthing.internal.moyer.wtf
+www.internal.moyer.wtf
+
+[amp]
+amp.internal.moyer.wtf
+
+[haproxy]
+haproxy.internal.moyer.wtf
+
+[plex]
+plex.internal.moyer.wtf
+
+[pkg_proxy]
+pkg-proxy.internal.moyer.wtf
+
+[syncthing]
+syncthing.internal.moyer.wtf
+
+[www]
+www.internal.moyer.wtf
