--- a/requirements.yml
+++ b/requirements.yml
@@ -10,3 +10,6 @@ collections:
   - name: community.general
     version: ">7.0.0"
     source: https://galaxy.ansible.com
+  - name: https://github.com/maxhoesel-ansible/ansible-collection-smallstep.git
+    type: git
+    version: main
