--- a/playbook-stage.yml
+++ b/playbook-stage.yml
@@ -1,7 +1,13 @@
 ---
-- hosts: amp-stage.lxd
-  become: true
-  vars_files:
-    - vars.yml
-  roles:
-    - amp
+- hosts: auth_stage
+  become: yes
+  tasks:
+    # Install and initialize the CA server.
+    # There are a lot of configuration options, see the step_ca README for details
+    - name: Install step-ca
+      include_role:
+        name: maxhoesel.smallstep.step_ca
+      vars:
+        step_ca_name: HiveMind Internal CA
+        step_ca_root_password: "password"
+        step_ca_intermediate_password: "password"
